# magb

./: .gitignore  CMakeLists.txt  README.md
src/: frontend.h  main.cpp
src/core/: bus.cpp  bus.h  cpu.cpp  cpu.h  typedefs.h
src/frontend/raylib/: raylib_frontend.cpp  raylib_frontend.h
